# memora

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
src/memora/: __init__.py  api.py  config.py  db.py  main.py  sqlite_db.py
src/memora/agent/: __init__.py  memory_agent.py  prompts.py  tools.py
src/memora/auth/: __init__.py  token.py
src/memora/embeddings/: __init__.py  volcengine.py
src/memora/llm/: __init__.py  volcengine.py
src/memora/storage/: __init__.py  sqlite_db.py  vector_store.py
tests/: test_api.py  test_api_integration.py  test_memory.py
