[project]
name = "memora"
version = "0.1.0"
description = ""
authors = [
    {name = "wuqinglong",email = "lancewu602@qq.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "chromadb>=0.4.22",
]

[tool.poetry]
packages = [{include = "memora", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
